--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "cypress": "^9.7.0"
   },
   "dependencies": {
