--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:open": "npx cypress open",
-    "cy:run": "npx cypress run",
+    "cy:run": "npx cypress run --browser chrome",
     "cy:dashboard": "",
     "cy:report": ""
   },
-  "repository": {
+  "repository": { 
     "type": "git",
     "url": ""
   },
